// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EnvCSRsOps createCSR() 1: Create new CSR - success 1`] = `
{
  "algorithm": "SHA256-RSA",
  "createdDate": "2024-07-31T03:37:28Z",
  "id": Any<String>,
  "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjQubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDQxIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAyvDwzpZNgiczqvdA0Z2mQDTi6m/yK+sVHd2Gg5fqoFR/5deA
U67qPcYb3imlA4LfFDeuIwCrnxZBh5JPga5A938iM64IDaiAK5SwOjolf/h4y/uz
356OLbDFKGMy2xlsvw+U6rvqmyjyxfa4kXW93c3D9YuxMGZQXivMA9pa2H+bcl8T
33LGL/YLoyR9xCKR+ZAcYh4vXRaIgZvY1w6UKzCkCvo2fVG/mfAbVFBz2GZrDKM3
oeMGMYSHzI7SE8eyO3RlpvlV1WMIhDwE5S5mFB7rl9vY77NZ2C71OdOPVvnvti8M
yFf3EICCnYynq3UtRRP1MqsOB7ucE3P+oT+fwQIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXY0LWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2NC1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBABQr9U3/a4QGdrxXbELmI6NPMomNcDi5i1GGY1FMM2s2MtfQ+pkw+zBHL0NT
TRLYogm9BOYK4xcJAbkFQvX0XzSxQN/7m0HNMOk2dhdeSY014J+B159SWoasNOt9
mTqhcOXj/cVpaLirAkLyWdMb4FQkDc90pHDhPyYBg38R1f7Y5NDUqdGYXL9ENOQX
oASCdF0YPibPdvAXhOR9GW7J6kKekvrKz6vp5pCranCovcherWF97UXiV+0cJL02
8YDuTgnfLO26mmzjYp0TXepyQH9yFA7uLewHsr9g7RQ3a/toZEMcbFsJBPtM6hdY
Xb1Ehpni+zdpdZx/MJ/jwyvbpMo=
-----END CERTIFICATE REQUEST-----
",
  "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev4.mytestrun.com/SERIALNUMBER=04/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
  "subjectAlternativeNames": [
    "frodo-dev4-alt1.mytestrun.com",
    "frodo-dev4-alt2.mytestrun.com",
  ],
}
`;

exports[`EnvCSRsOps deleteCSR() 1: Delete existing CSR - success 1`] = `""`;

exports[`EnvCSRsOps deleteCSR() 2: Delete non-existing CSR - success 1`] = `""`;

exports[`EnvCSRsOps deleteCSRs() 1: Delete all CSRs - success 1`] = `
[
  {
    "algorithm": "SHA256-RSA",
    "createdDate": "2024-07-31T03:37:28Z",
    "id": "9e970fc7-1485-4318-b3ea-b20429f194ff",
    "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjQubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDQxIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAyvDwzpZNgiczqvdA0Z2mQDTi6m/yK+sVHd2Gg5fqoFR/5deA
U67qPcYb3imlA4LfFDeuIwCrnxZBh5JPga5A938iM64IDaiAK5SwOjolf/h4y/uz
356OLbDFKGMy2xlsvw+U6rvqmyjyxfa4kXW93c3D9YuxMGZQXivMA9pa2H+bcl8T
33LGL/YLoyR9xCKR+ZAcYh4vXRaIgZvY1w6UKzCkCvo2fVG/mfAbVFBz2GZrDKM3
oeMGMYSHzI7SE8eyO3RlpvlV1WMIhDwE5S5mFB7rl9vY77NZ2C71OdOPVvnvti8M
yFf3EICCnYynq3UtRRP1MqsOB7ucE3P+oT+fwQIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXY0LWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2NC1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBABQr9U3/a4QGdrxXbELmI6NPMomNcDi5i1GGY1FMM2s2MtfQ+pkw+zBHL0NT
TRLYogm9BOYK4xcJAbkFQvX0XzSxQN/7m0HNMOk2dhdeSY014J+B159SWoasNOt9
mTqhcOXj/cVpaLirAkLyWdMb4FQkDc90pHDhPyYBg38R1f7Y5NDUqdGYXL9ENOQX
oASCdF0YPibPdvAXhOR9GW7J6kKekvrKz6vp5pCranCovcherWF97UXiV+0cJL02
8YDuTgnfLO26mmzjYp0TXepyQH9yFA7uLewHsr9g7RQ3a/toZEMcbFsJBPtM6hdY
Xb1Ehpni+zdpdZx/MJ/jwyvbpMo=
-----END CERTIFICATE REQUEST-----
",
    "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev4.mytestrun.com/SERIALNUMBER=04/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
    "subjectAlternativeNames": [
      "frodo-dev4-alt1.mytestrun.com",
      "frodo-dev4-alt2.mytestrun.com",
    ],
  },
  {
    "algorithm": "SHA256-RSA",
    "createdDate": "2024-07-31T03:37:27Z",
    "id": "e13a0235-9c69-40ef-b2bc-c667f6bd60c7",
    "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjEubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDcxIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAy7cEn2oeTbpS6hK/zFNKQ7dZ5e0Xpn0pXhlXcr7G1xHb412D
CxUnYvzdaM6a4E0vJmhSuL/hMhwERzDpPos4C5dg0+BuwQadvm9cYrIXACQZU9Hm
NNXtZD6i1Lc+nh0RZk/zXmLR4AZHrMlM9JqiK0iszI8OpyWgUZ9HG0Yea4Gc3IHm
mXeZlM6sEOBr5wZERju4Buj7LEMgnrdEyhrTQkWo+9o4Yvu6LIVvrMVSOPbEd002
kn5bhC2+NoXm4GO2ZQ/sGqgWfFkV3wKXvaZ8UszvzzzJKMeaohIFNrkmveIobiIH
0nU9xm9Y0X4jLS0ptZIhTQbTqWKMHqloYRQMRQIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXY3LWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2Ny1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBADEjYLqzHuNrSn1kILYS0g8Ku06ctLHcTlKo49o3+rJqfa8cuFNJLWXGomUp
Z+A7h+JIsOGbrSLd/wWwomwKyUco4E1qBzLnqwToWh3ROYvEX/jfrlZphSAgCVq4
tgdvZ3uWnZ0215njJIpQEOJONvKaKQ3rEr4R1UXYiDdgSGbbr1xs5ebw+co23oD+
ON9gTMmMqw8F2b37fsSfT3bG5gcLCY9l0ICJ88cQG2hTKS6H29c/0LDh0VWefKG/
qaDoHkzlzfo2yLYxWbcO69/k2Wue0D9au/GGblHHNMD/1dFGA0tPa7HqDBrEOncN
UpbTp3haEu2rQqxckkuq/XTtPhE=
-----END CERTIFICATE REQUEST-----
",
    "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev1.mytestrun.com/SERIALNUMBER=07/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
    "subjectAlternativeNames": [
      "frodo-dev7-alt1.mytestrun.com",
      "frodo-dev7-alt2.mytestrun.com",
    ],
  },
  {
    "algorithm": "SHA256-RSA",
    "createdDate": "2024-07-31T03:37:26Z",
    "id": "eacdbc4f-a826-480b-9793-4399125b85f4",
    "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjEubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDYxIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAwbGETtnlSxPC4JYK0ydPz45c9KZol/OTol4jElc28KpveGzH
GiRChnKX1h8hE2ts3/T20IMu2mYXGlhnc/dYgmlom6SWXOURX7a1JtrPvWDGt1j2
0AaMPkOZZW3GbKp8gNb9xu+jynkBT5KknE+zSEgE8QU/i8WBZ4Cywokzj2SiRJfY
VoBfzNEesq5lrSwLbZGukF6W7evpAfZUBG764OWICOyVeE+WctriCCv0mLMPGl9W
cwvAGgLx/mA+EMUd9DD73vzyqYptyEu+Rk3TGB7mLei/0EdG9IT5Ra9IKTB+o3/d
azmm7ocBci0BB+aTRtWzgIEUwkCwlUCmVVN5OwIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXY2LWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2Ni1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBAIFa1tdiDUjlAP1xA6meFvBNUB2CTDbZgAZ1mogx4bXcEakhzHj23JB+k6Br
QrRB+8ei/fkc8+YxQaYH18fV6nN+pOAPgT09BabGjdx6zPxQLFkCLafOrK9fQCr7
+hkGnsS2uuvn2zYShu5Sr3E8O2D6efJfTgLnAp992xE1p/o4lO21g5WaMj5P7ash
BiFroIc4iW3U501VjmXmEDcJ2x7i26yoETgvDVNaUV4EMPhKu5AoomjGorMl0MuV
a/W54Oy8bOZ+LbVpsNyC6oqXcM7tUktSnkneNnAmPv1Rn5eY1vrRJ0ntQ14vhAfC
Mv+DmJFvZRYJ1oxHbTXiHSk6eU8=
-----END CERTIFICATE REQUEST-----
",
    "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev1.mytestrun.com/SERIALNUMBER=06/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
    "subjectAlternativeNames": [
      "frodo-dev6-alt1.mytestrun.com",
      "frodo-dev6-alt2.mytestrun.com",
    ],
  },
  {
    "algorithm": "SHA256-RSA",
    "createdDate": "2024-07-31T03:37:25Z",
    "id": "a81e409a-e9ee-4d8e-b36a-3304d3c50b9b",
    "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjEubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDUxIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAuANiHRuYgzCpMcAFPWBPAwI2iobP309ux8JGoTQdB3oiOUxV
XAcTpJrwGr3KUlDkWJCBTm3+Zh787aBeQN1kFhjLf0tSfGpaLYQg6+PZzY/6xAm0
oTfTc7LMCX9pKvFVOzp1z7kCUhG3KCLon5RlnYnrG97G/O5yeR5bD5CXP/ENG8cG
WHEUave0OOfeg3W2z5Rp55k6s5COa8EHpzn72aV32x0r3vZMmrPq6OKbw0LW181T
U2pvfrjxbZBmZJ9nMvXwmyN7pm07h5slGRtzV2sPFv0wO7dWgfCX+XpRLVFiUv1y
suZvjfXUwMMclx9oGobgYAePpKa8eUj8wgGpPQIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXY1LWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2NS1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBABe5dOTYJgBJRusCLh9//sUGuX8CvRTeV49RGiBoolfP9pOMipBPVP5xXvjS
mhRH8Xw+rTgV//gSqjdoV6JahaIt4fkj34Xd4ZK4dtvBrQ742tY7JpAdbzApBEoW
Fspz0Z5sxVyka5zuXSZkJY0EuWzEouSGW8EHiM1rg5AA9Hg2wadUBGx1Zb2LwboJ
jpfQkUCBo36BsxBsWEfkAW2Cx+Tw/vsOgNB2EJ70XPKPpZmzIvejf1nR4rl1+QZc
Sma6sOY9XCP6MEFJuJxjDiuFA6yJKcCI44bwcP3Y7U+kKvrSvD3Lv+CE28YDO1JL
Il17lf2Ngo3ne3ENlDDDfjAhG2I=
-----END CERTIFICATE REQUEST-----
",
    "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev1.mytestrun.com/SERIALNUMBER=05/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
    "subjectAlternativeNames": [
      "frodo-dev5-alt1.mytestrun.com",
      "frodo-dev5-alt2.mytestrun.com",
    ],
  },
  {
    "algorithm": "SHA256-RSA",
    "createdDate": "2024-07-31T03:37:24Z",
    "id": "0f33f533-eb6b-4dd8-a4bb-fd5626526daa",
    "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjEubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDExIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAlwYU3mSJAvRu/YITNezp+ceFts6aNGe8J4tenjUDEmRGhmHS
iZVw7mpNu1nK75dutyFqLDufi2LYSnH/TzKmtlaU5si1qb5O/UvoQTcvkDUPTBp9
IFPNAsLQqhZUEOg0LWevfnbA9hVmpvB2FUcJNULvgU/3OqdWCX45wbuXOOM1xD6g
Mm28luhgmNOgRbJBTLUuNKqg7UcAV/KEkRLeKhTBbk0deSORTyZqj+ntjBMvVOgr
cb0+3QROUGSrvZIRyanRBbOgC2MOq6QY0IF5KeWYsLqI+U46HgXooXfJZAMOW4zz
4UAGmWXYgbH57/KewS2YRis6SPpPvmumeMb/CQIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXYxLWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2MS1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBABc/nFTLkQpYUGB7Ausc/RSn/M/7gPwA5UL94HgDKj5F0zWgU0DATuhUaXqs
sRpHB89z8TLwKzxVlnmAIQ6goIoWpWFfZHSSHBjJEAcuFspA+qHvGo8dHiGZIGmZ
gn/LbEjUCSa5z8cSvxevOylQWpRoqrX5XDdOdqKai2WBazMnI+VNgAryeahmjiF4
wopChu7+9yR7RASM8wT284pjaSmiz2/X/9wGb+79YxrQPb88gV5KrpLwf9hPgLqA
sw5EGKhPu8rLIipjk38f2bMf3CTk9lZtiA6gNGOo7GB3vy0vB6fsDfwJx7zKcm1F
bbPVVF+7YEyCzcfuBc4HK7dYI4U=
-----END CERTIFICATE REQUEST-----
",
    "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev1.mytestrun.com/SERIALNUMBER=01/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
    "subjectAlternativeNames": [
      "frodo-dev1-alt1.mytestrun.com",
      "frodo-dev1-alt2.mytestrun.com",
    ],
  },
  {
    "algorithm": "SHA256-RSA",
    "certificateID": "ccrt-269d01ff-734d-4ce7-aad4-39c6c9964581",
    "createdDate": "2024-07-31T03:37:24Z",
    "id": "f5bdc59a-1326-4c74-a3c4-b5ba0148ebd5",
    "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjIubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDIxIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAzbtAdxkXIWtycEXTvGLrPgcEBcfzJYVK1Dc7Otiu9EnBt7vL
A/D7AVFE4yF6In64n1rJGl6L5xFA48JRNRTeejwR7btMhz7/7Y4v8Yx3ga7aPcDw
/t8ov0DBIgIhbNw0oP+HWBzM0hzO1V5HGNZ4jNMWeu2XbQrlyrVasZ6873zunSgf
ydfqyAmpA6oRGPvb6CNJs4lFj2HrpRuu6cniP3cho7PG6CmDvHX3v4NMJMxtgYqU
JZlq67QFCuYUwLe5Wq5P5TpvRv6By7aTNZuvkjcrF/vPvACphqW7bfRz0Uvbw4G6
5HrFzBPxjTX88LtuZpF/xwc0HRxBoBdIKXqhgQIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXYyLWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2Mi1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBABUIFoJlSH+BM2EyBWL/oEIQa/pFsTtwFg/qtpB5YkBWMnOw9BiRZvfM1J5j
ksnC/zKGuYgdVxGIk2PW78eFvnZ1Y1H9Y6yaaWtISjGTM85Zbcfytk850Zlwgsm/
p3DmQBtKYDa61SmLuS9juoZFQ6i6XIH7K2FPViyKaLHDcijgmTspG8KkB8ASz5nU
YqGMHn/A86y3rmKw1nxh/yY0H10Tgm8dBg291hRTQf9rk+GQu1gmLKsqv03YrG5h
/fPFwO6K0Kn2r6XdDRl7URqmNVi26/BWS8VCUUX3BE/BH+4nFllY/b5iEynhCzT2
1/2MCqJwWLEMlReQcTIZEjyhAmY=
-----END CERTIFICATE REQUEST-----
",
    "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev2.mytestrun.com/SERIALNUMBER=02/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
    "subjectAlternativeNames": [
      "frodo-dev2-alt1.mytestrun.com",
      "frodo-dev2-alt2.mytestrun.com",
    ],
  },
]
`;

exports[`EnvCSRsOps readCSR() 1: Read existing CSR - success 1`] = `
{
  "algorithm": "SHA256-RSA",
  "createdDate": "2024-07-31T03:37:24Z",
  "id": "0f33f533-eb6b-4dd8-a4bb-fd5626526daa",
  "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjEubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDExIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAlwYU3mSJAvRu/YITNezp+ceFts6aNGe8J4tenjUDEmRGhmHS
iZVw7mpNu1nK75dutyFqLDufi2LYSnH/TzKmtlaU5si1qb5O/UvoQTcvkDUPTBp9
IFPNAsLQqhZUEOg0LWevfnbA9hVmpvB2FUcJNULvgU/3OqdWCX45wbuXOOM1xD6g
Mm28luhgmNOgRbJBTLUuNKqg7UcAV/KEkRLeKhTBbk0deSORTyZqj+ntjBMvVOgr
cb0+3QROUGSrvZIRyanRBbOgC2MOq6QY0IF5KeWYsLqI+U46HgXooXfJZAMOW4zz
4UAGmWXYgbH57/KewS2YRis6SPpPvmumeMb/CQIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXYxLWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2MS1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBABc/nFTLkQpYUGB7Ausc/RSn/M/7gPwA5UL94HgDKj5F0zWgU0DATuhUaXqs
sRpHB89z8TLwKzxVlnmAIQ6goIoWpWFfZHSSHBjJEAcuFspA+qHvGo8dHiGZIGmZ
gn/LbEjUCSa5z8cSvxevOylQWpRoqrX5XDdOdqKai2WBazMnI+VNgAryeahmjiF4
wopChu7+9yR7RASM8wT284pjaSmiz2/X/9wGb+79YxrQPb88gV5KrpLwf9hPgLqA
sw5EGKhPu8rLIipjk38f2bMf3CTk9lZtiA6gNGOo7GB3vy0vB6fsDfwJx7zKcm1F
bbPVVF+7YEyCzcfuBc4HK7dYI4U=
-----END CERTIFICATE REQUEST-----
",
  "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev1.mytestrun.com/SERIALNUMBER=01/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
  "subjectAlternativeNames": [
    "frodo-dev1-alt1.mytestrun.com",
    "frodo-dev1-alt2.mytestrun.com",
  ],
}
`;

exports[`EnvCSRsOps readCSR() 2: Read non-existing CSR - error 1`] = `[FrodoError: Error reading CSR esv-does-not-exist]`;

exports[`EnvCSRsOps readCSRs() 1: Read all CSRs - success 1`] = `
[
  {
    "algorithm": "SHA256-RSA",
    "createdDate": "2024-07-31T03:37:27Z",
    "id": "e13a0235-9c69-40ef-b2bc-c667f6bd60c7",
    "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjEubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDcxIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAy7cEn2oeTbpS6hK/zFNKQ7dZ5e0Xpn0pXhlXcr7G1xHb412D
CxUnYvzdaM6a4E0vJmhSuL/hMhwERzDpPos4C5dg0+BuwQadvm9cYrIXACQZU9Hm
NNXtZD6i1Lc+nh0RZk/zXmLR4AZHrMlM9JqiK0iszI8OpyWgUZ9HG0Yea4Gc3IHm
mXeZlM6sEOBr5wZERju4Buj7LEMgnrdEyhrTQkWo+9o4Yvu6LIVvrMVSOPbEd002
kn5bhC2+NoXm4GO2ZQ/sGqgWfFkV3wKXvaZ8UszvzzzJKMeaohIFNrkmveIobiIH
0nU9xm9Y0X4jLS0ptZIhTQbTqWKMHqloYRQMRQIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXY3LWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2Ny1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBADEjYLqzHuNrSn1kILYS0g8Ku06ctLHcTlKo49o3+rJqfa8cuFNJLWXGomUp
Z+A7h+JIsOGbrSLd/wWwomwKyUco4E1qBzLnqwToWh3ROYvEX/jfrlZphSAgCVq4
tgdvZ3uWnZ0215njJIpQEOJONvKaKQ3rEr4R1UXYiDdgSGbbr1xs5ebw+co23oD+
ON9gTMmMqw8F2b37fsSfT3bG5gcLCY9l0ICJ88cQG2hTKS6H29c/0LDh0VWefKG/
qaDoHkzlzfo2yLYxWbcO69/k2Wue0D9au/GGblHHNMD/1dFGA0tPa7HqDBrEOncN
UpbTp3haEu2rQqxckkuq/XTtPhE=
-----END CERTIFICATE REQUEST-----
",
    "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev1.mytestrun.com/SERIALNUMBER=07/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
    "subjectAlternativeNames": [
      "frodo-dev7-alt1.mytestrun.com",
      "frodo-dev7-alt2.mytestrun.com",
    ],
  },
  {
    "algorithm": "SHA256-RSA",
    "createdDate": "2024-07-31T03:37:26Z",
    "id": "eacdbc4f-a826-480b-9793-4399125b85f4",
    "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjEubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDYxIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAwbGETtnlSxPC4JYK0ydPz45c9KZol/OTol4jElc28KpveGzH
GiRChnKX1h8hE2ts3/T20IMu2mYXGlhnc/dYgmlom6SWXOURX7a1JtrPvWDGt1j2
0AaMPkOZZW3GbKp8gNb9xu+jynkBT5KknE+zSEgE8QU/i8WBZ4Cywokzj2SiRJfY
VoBfzNEesq5lrSwLbZGukF6W7evpAfZUBG764OWICOyVeE+WctriCCv0mLMPGl9W
cwvAGgLx/mA+EMUd9DD73vzyqYptyEu+Rk3TGB7mLei/0EdG9IT5Ra9IKTB+o3/d
azmm7ocBci0BB+aTRtWzgIEUwkCwlUCmVVN5OwIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXY2LWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2Ni1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBAIFa1tdiDUjlAP1xA6meFvBNUB2CTDbZgAZ1mogx4bXcEakhzHj23JB+k6Br
QrRB+8ei/fkc8+YxQaYH18fV6nN+pOAPgT09BabGjdx6zPxQLFkCLafOrK9fQCr7
+hkGnsS2uuvn2zYShu5Sr3E8O2D6efJfTgLnAp992xE1p/o4lO21g5WaMj5P7ash
BiFroIc4iW3U501VjmXmEDcJ2x7i26yoETgvDVNaUV4EMPhKu5AoomjGorMl0MuV
a/W54Oy8bOZ+LbVpsNyC6oqXcM7tUktSnkneNnAmPv1Rn5eY1vrRJ0ntQ14vhAfC
Mv+DmJFvZRYJ1oxHbTXiHSk6eU8=
-----END CERTIFICATE REQUEST-----
",
    "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev1.mytestrun.com/SERIALNUMBER=06/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
    "subjectAlternativeNames": [
      "frodo-dev6-alt1.mytestrun.com",
      "frodo-dev6-alt2.mytestrun.com",
    ],
  },
  {
    "algorithm": "SHA256-RSA",
    "createdDate": "2024-07-31T03:37:25Z",
    "id": "a81e409a-e9ee-4d8e-b36a-3304d3c50b9b",
    "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjEubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDUxIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAuANiHRuYgzCpMcAFPWBPAwI2iobP309ux8JGoTQdB3oiOUxV
XAcTpJrwGr3KUlDkWJCBTm3+Zh787aBeQN1kFhjLf0tSfGpaLYQg6+PZzY/6xAm0
oTfTc7LMCX9pKvFVOzp1z7kCUhG3KCLon5RlnYnrG97G/O5yeR5bD5CXP/ENG8cG
WHEUave0OOfeg3W2z5Rp55k6s5COa8EHpzn72aV32x0r3vZMmrPq6OKbw0LW181T
U2pvfrjxbZBmZJ9nMvXwmyN7pm07h5slGRtzV2sPFv0wO7dWgfCX+XpRLVFiUv1y
suZvjfXUwMMclx9oGobgYAePpKa8eUj8wgGpPQIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXY1LWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2NS1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBABe5dOTYJgBJRusCLh9//sUGuX8CvRTeV49RGiBoolfP9pOMipBPVP5xXvjS
mhRH8Xw+rTgV//gSqjdoV6JahaIt4fkj34Xd4ZK4dtvBrQ742tY7JpAdbzApBEoW
Fspz0Z5sxVyka5zuXSZkJY0EuWzEouSGW8EHiM1rg5AA9Hg2wadUBGx1Zb2LwboJ
jpfQkUCBo36BsxBsWEfkAW2Cx+Tw/vsOgNB2EJ70XPKPpZmzIvejf1nR4rl1+QZc
Sma6sOY9XCP6MEFJuJxjDiuFA6yJKcCI44bwcP3Y7U+kKvrSvD3Lv+CE28YDO1JL
Il17lf2Ngo3ne3ENlDDDfjAhG2I=
-----END CERTIFICATE REQUEST-----
",
    "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev1.mytestrun.com/SERIALNUMBER=05/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
    "subjectAlternativeNames": [
      "frodo-dev5-alt1.mytestrun.com",
      "frodo-dev5-alt2.mytestrun.com",
    ],
  },
  {
    "algorithm": "SHA256-RSA",
    "createdDate": "2024-07-31T03:37:25Z",
    "id": "e673782f-53f2-4775-940f-c4eb868deb3f",
    "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjMubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDMxIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAucFb287iQzWKWGc2kYDFHXCT3ywrH2sCsnCcqvXHki/M8Ean
ZP4aJ/KK8iFxKJvWqkvkwukSk3peaOrClLMotltKZHLi5yqdNQe8lXNDwf3LwJ38
QSpsOOt2yMA/QgWqbuHBsNTPQBDgUD7Zl8urKk5ne1S+mPnHMpNOaU50j7eZmfJI
RT7jvB5OOmBWb43+f7ShvR3WNiGZ1Pd2kkuWkhjS3xfXOFInXxYRV3Kxug2lnUgx
sE22mdY4VI8CwZv0Ft64lYRkkNsuIqR5RvLyszb5UCX/nGKgTCnlR8vjmp3scrTd
WsT+5fi9+6Ix8bKNuhGJaunvq+dPfhzFrzpMRQIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXYzLWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2My1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBAFAXYp08dTjPXK61JDNLz6OGlTRTrnQJZ83O4rETyfjYUizMuLTse9p4aHsD
4Wpbr0STzNWUHmDr1XNRRMKpY9LEKcgsJJ5PoCxWSB1+cfQYKw/SaCOJFeAh2V0p
EtkrVoUOjrya15SigtN2pMMuVLRzFkQhGi4Xeti5e9NA4H5fjynTC4CYSLCFnZq0
Boz7B+uFbP4IZf9btXS5mykKPh1GEn4S9E+tP53AA6WiYh8S/34wSJK0Yde7ICXK
vEsW+rT0xi++iXJrh2X/OxHnWmgquMz46Dx+vHemQ+Gw4n4CXEhyXYWn4snsltfb
XKC9P3iL2YGty3xnegfXEpsBjqI=
-----END CERTIFICATE REQUEST-----
",
    "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev3.mytestrun.com/SERIALNUMBER=03/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
    "subjectAlternativeNames": [
      "frodo-dev3-alt1.mytestrun.com",
      "frodo-dev3-alt2.mytestrun.com",
    ],
  },
  {
    "algorithm": "SHA256-RSA",
    "createdDate": "2024-07-31T03:37:24Z",
    "id": "0f33f533-eb6b-4dd8-a4bb-fd5626526daa",
    "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjEubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDExIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAlwYU3mSJAvRu/YITNezp+ceFts6aNGe8J4tenjUDEmRGhmHS
iZVw7mpNu1nK75dutyFqLDufi2LYSnH/TzKmtlaU5si1qb5O/UvoQTcvkDUPTBp9
IFPNAsLQqhZUEOg0LWevfnbA9hVmpvB2FUcJNULvgU/3OqdWCX45wbuXOOM1xD6g
Mm28luhgmNOgRbJBTLUuNKqg7UcAV/KEkRLeKhTBbk0deSORTyZqj+ntjBMvVOgr
cb0+3QROUGSrvZIRyanRBbOgC2MOq6QY0IF5KeWYsLqI+U46HgXooXfJZAMOW4zz
4UAGmWXYgbH57/KewS2YRis6SPpPvmumeMb/CQIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXYxLWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2MS1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBABc/nFTLkQpYUGB7Ausc/RSn/M/7gPwA5UL94HgDKj5F0zWgU0DATuhUaXqs
sRpHB89z8TLwKzxVlnmAIQ6goIoWpWFfZHSSHBjJEAcuFspA+qHvGo8dHiGZIGmZ
gn/LbEjUCSa5z8cSvxevOylQWpRoqrX5XDdOdqKai2WBazMnI+VNgAryeahmjiF4
wopChu7+9yR7RASM8wT284pjaSmiz2/X/9wGb+79YxrQPb88gV5KrpLwf9hPgLqA
sw5EGKhPu8rLIipjk38f2bMf3CTk9lZtiA6gNGOo7GB3vy0vB6fsDfwJx7zKcm1F
bbPVVF+7YEyCzcfuBc4HK7dYI4U=
-----END CERTIFICATE REQUEST-----
",
    "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev1.mytestrun.com/SERIALNUMBER=01/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
    "subjectAlternativeNames": [
      "frodo-dev1-alt1.mytestrun.com",
      "frodo-dev1-alt2.mytestrun.com",
    ],
  },
  {
    "algorithm": "SHA256-RSA",
    "createdDate": "2024-07-31T03:37:24Z",
    "id": "f5bdc59a-1326-4c74-a3c4-b5ba0148ebd5",
    "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjIubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDIxIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAzbtAdxkXIWtycEXTvGLrPgcEBcfzJYVK1Dc7Otiu9EnBt7vL
A/D7AVFE4yF6In64n1rJGl6L5xFA48JRNRTeejwR7btMhz7/7Y4v8Yx3ga7aPcDw
/t8ov0DBIgIhbNw0oP+HWBzM0hzO1V5HGNZ4jNMWeu2XbQrlyrVasZ6873zunSgf
ydfqyAmpA6oRGPvb6CNJs4lFj2HrpRuu6cniP3cho7PG6CmDvHX3v4NMJMxtgYqU
JZlq67QFCuYUwLe5Wq5P5TpvRv6By7aTNZuvkjcrF/vPvACphqW7bfRz0Uvbw4G6
5HrFzBPxjTX88LtuZpF/xwc0HRxBoBdIKXqhgQIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXYyLWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2Mi1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBABUIFoJlSH+BM2EyBWL/oEIQa/pFsTtwFg/qtpB5YkBWMnOw9BiRZvfM1J5j
ksnC/zKGuYgdVxGIk2PW78eFvnZ1Y1H9Y6yaaWtISjGTM85Zbcfytk850Zlwgsm/
p3DmQBtKYDa61SmLuS9juoZFQ6i6XIH7K2FPViyKaLHDcijgmTspG8KkB8ASz5nU
YqGMHn/A86y3rmKw1nxh/yY0H10Tgm8dBg291hRTQf9rk+GQu1gmLKsqv03YrG5h
/fPFwO6K0Kn2r6XdDRl7URqmNVi26/BWS8VCUUX3BE/BH+4nFllY/b5iEynhCzT2
1/2MCqJwWLEMlReQcTIZEjyhAmY=
-----END CERTIFICATE REQUEST-----
",
    "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev2.mytestrun.com/SERIALNUMBER=02/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
    "subjectAlternativeNames": [
      "frodo-dev2-alt1.mytestrun.com",
      "frodo-dev2-alt2.mytestrun.com",
    ],
  },
]
`;

exports[`EnvCSRsOps updateCSR() 1: Update existing CSR - success 1`] = `
{
  "algorithm": "SHA256-RSA",
  "certificateID": "ccrt-269d01ff-734d-4ce7-aad4-39c6c9964581",
  "createdDate": "2024-07-31T03:37:24Z",
  "id": "f5bdc59a-1326-4c74-a3c4-b5ba0148ebd5",
  "request": "-----BEGIN CERTIFICATE REQUEST-----
MIID0DCCArgCAQAwggEsMQswCQYDVQQGEwJVUzEOMAwGA1UECBMFVGV4YXMxEzAR
BgNVBAcTCkdlb3JnZXRvd24xFjAUBgNVBAkTDTEgTWFpbiBTdHJlZXQxEzARBgNV
BAoTClJvY2tjYXJ2ZXIxFjAUBgNVBAsTDUZyb2RvIExpYnJhcnkxITAfBgNVBAMT
GGZyb2RvLWRldjIubXl0ZXN0cnVuLmNvbTELMAkGA1UEBRMCMDIxIjAgBgkqhkiG
9w0BCQEWE3ZzY2hldWJlckBnbWFpbC5jb20xFTATBgNVBA8TDFVuaXQgVGVzdGlu
ZzETMBEGCysGAQQBgjc8AgEDEwJVUzEbMBkGCysGAQQBgjc8AgEBEwpHZW9yZ2V0
b3duMRYwFAYLKwYBBAGCNzwCAQITBVRleGFzMIIBIjANBgkqhkiG9w0BAQEFAAOC
AQ8AMIIBCgKCAQEAzbtAdxkXIWtycEXTvGLrPgcEBcfzJYVK1Dc7Otiu9EnBt7vL
A/D7AVFE4yF6In64n1rJGl6L5xFA48JRNRTeejwR7btMhz7/7Y4v8Yx3ga7aPcDw
/t8ov0DBIgIhbNw0oP+HWBzM0hzO1V5HGNZ4jNMWeu2XbQrlyrVasZ6873zunSgf
ydfqyAmpA6oRGPvb6CNJs4lFj2HrpRuu6cniP3cho7PG6CmDvHX3v4NMJMxtgYqU
JZlq67QFCuYUwLe5Wq5P5TpvRv6By7aTNZuvkjcrF/vPvACphqW7bfRz0Uvbw4G6
5HrFzBPxjTX88LtuZpF/xwc0HRxBoBdIKXqhgQIDAQABoF0wWwYJKoZIhvcNAQkO
MU4wTDBKBgNVHREBAf8EQDA+gh1mcm9kby1kZXYyLWFsdDEubXl0ZXN0cnVuLmNv
bYIdZnJvZG8tZGV2Mi1hbHQyLm15dGVzdHJ1bi5jb20wDQYJKoZIhvcNAQELBQAD
ggEBABUIFoJlSH+BM2EyBWL/oEIQa/pFsTtwFg/qtpB5YkBWMnOw9BiRZvfM1J5j
ksnC/zKGuYgdVxGIk2PW78eFvnZ1Y1H9Y6yaaWtISjGTM85Zbcfytk850Zlwgsm/
p3DmQBtKYDa61SmLuS9juoZFQ6i6XIH7K2FPViyKaLHDcijgmTspG8KkB8ASz5nU
YqGMHn/A86y3rmKw1nxh/yY0H10Tgm8dBg291hRTQf9rk+GQu1gmLKsqv03YrG5h
/fPFwO6K0Kn2r6XdDRl7URqmNVi26/BWS8VCUUX3BE/BH+4nFllY/b5iEynhCzT2
1/2MCqJwWLEMlReQcTIZEjyhAmY=
-----END CERTIFICATE REQUEST-----
",
  "subject": "C=US/ST=Texas/L=Georgetown/streetAddress=1 Main Street/O=Rockcarver/OU=Frodo Library/CN=frodo-dev2.mytestrun.com/SERIALNUMBER=02/emailAddress=vscheuber@gmail.com/businessCategory=Unit Testing/jurisdictionCountryName=US/jurisdictionLocalityName=Georgetown/jurisdictionStateOrProvinceName=Texas",
  "subjectAlternativeNames": [
    "frodo-dev2-alt1.mytestrun.com",
    "frodo-dev2-alt2.mytestrun.com",
  ],
}
`;

exports[`EnvCSRsOps updateCSR() 2: Update non-existing CSR - error 1`] = `[FrodoError: Error updating CSR csr-does-not-exist]`;
